add shareLink func

--- a/cloude_storage/src/pages/Home/Home.module.css
+++ b/cloude_storage/src/pages/Home/Home.module.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     display: flex;
     box-sizing: border-box;
-    background-image: url('../../img/home.jfif');
+    background-image: url('../../img/fon2.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     font-family: "Arial Black", Gadget, sans-serif;
