--- a/cloude_storage/src/components/EntryForm/EntryForm.module.css
+++ b/cloude_storage/src/components/EntryForm/EntryForm.module.css
@@ -18,3 +18,18 @@
     margin-top: 10px;
 
 }
+
+.error {
+    color: red;
+    font-size: 0.9em;
+    margin-top: 5px;
+}
+
+.errorInput {
+    border-color: red;
+    box-shadow: 0 0 3px red;
+}
+
+.disabledButton {
+    opacity: 0.7;
+}
